html/css: accordion completed

--- a/01-accordion.html
+++ b/01-accordion.html
@@ -35,13 +35,150 @@ GREY: #343A40
 body {
   font-family: 'Inter', sans-serif;
   color: #343A40;
+  line-height: 1;
+}
+
+.accordion {
+  width: 700px;
+  margin: 100px auto;
+  
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+
+}
+
+.item {
+box-shadow: 0 0 32px rgba( 0, 0, 0, 0.1);
+padding: 24px;
+
+display: grid;
+grid-template-columns: auto 1fr auto;
+column-gap: 24px;
+row-gap: 32px;
+align-items: center;
+}
+
+.number, .text {
+font-size: 24px;
+font-weight: 500;
+/* color: #087F5B; */
+}
+
+.number {
+  color: #868e96;
+}
+
+
+.icon {
+width: 24px;
+height: 24px;
+color: #087F5B;
+}
+
+.hidden-box {
+  grid-column: 2;
+  display: none;
+}
+
+.hidden-box p {
+line-height: 1.6;
+margin-bottom: 24px;
+}
+
+.hidden-box ul {
+  color: #868e96;
+  margin-left: 16px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  /* align-items: center; */
+}
+
+.open {
+  border-top: 4px solid #087F5B;
   
 }
+
+.open .hidden-box {
+  display: block;
+}
+
+.open .number, .open .text {
+  color: #087F5B;
+}
+
 </style>
   
 
 </head>
 <body>
-  <div class="accordion">Test</div>
+
+  
+  <div class="accordion">
+
+    <!-- accordion 1 -->
+    <div class="item">
+    <p class="number">01</p>
+    <p class="text">Where are these chairs assembled?</p>
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+    </svg>
+    <div class="hidden-box">
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro id harum ipsam ducimus eveniet tempora possimus dolores? Alias, cum ut error doloremque est dolorem temporibus nostrum voluptates, unde inventore vero!</p>
+      <ul>
+        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+        <li>pariatur dolores blanditiis repudiandae dignissimos magni error ad.</li>
+        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+        <li>pariatur dolores blanditiis repudiandae dignissimos magni.</li>
+      </ul>
+    </div>
+  </div>
+  
+
+  
+
+
+    <!-- accordion 2 -->
+    <div class="item open">
+    <p class="number">02</p>
+    <p class="text">How long do I have to return my chair?</p>
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+    </svg>
+    <div class="hidden-box">
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro id harum ipsam ducimus eveniet tempora possimus dolores? Alias, cum ut error doloremque est dolorem temporibus nostrum voluptates, unde inventore vero!</p>
+      <ul>
+        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+        <li>pariatur dolores blanditiis repudiandae dignissimos magni error ad.</li>
+        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+        <li>pariatur dolores blanditiis repudiandae dignissimos magni.</li>
+      </ul>
+    </div>
+  </div>
+  
+
+  
+  
+
+    <!-- accordion 3 -->
+    <div class="item">
+    <p class="number">03</p>
+    <p class="text">Do you ship to countries outside the EU?</p>
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+    </svg>
+    <div class="hidden-box">
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro id harum ipsam ducimus eveniet tempora possimus dolores? Alias, cum ut error doloremque est dolorem temporibus nostrum voluptates, unde inventore vero!</p>
+      <ul>
+        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+        <li>pariatur dolores blanditiis repudiandae dignissimos magni error ad.</li>
+        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+        <li>pariatur dolores blanditiis repudiandae dignissimos magni.</li>
+      </ul>
+    </div>
+  </div>
+  </div>
 </body>
 </html>
