Table: css design complete

--- a/03-table.html
+++ b/03-table.html
@@ -36,6 +36,38 @@ body {
   font-family: 'Inter', sans-serif;
   color: #343A40;
   line-height: 1;
+
+  display: flex;
+  justify-content: center;
+}
+
+table {
+  width: 800px;
+  font-size: 18px;
+
+  margin-top: 100px;
+/* border: 1px solid #343a40; */
+  border-collapse: collapse;
+}
+
+th, td {
+  /* border: 1px solid #343A40; */
+padding: 16px 24px;
+text-align: left;
+}
+
+thead th {
+  background-color: #087F5B ;
+  color: #fff;
+  width: 25px;
+}
+
+tbody tr:nth-child(odd){
+background-color: #343a400d;
+}
+
+tbody tr:nth-child(even){
+background-color: #087f5b23;
 }
 
   </style>
