pagination: html set up

--- a/04-pagination.html
+++ b/04-pagination.html
@@ -38,15 +38,45 @@ body {
   line-height: 1;
 }
 
+.pagination {}
+.btn {}
+.btn-icon {}
+.dots {}
+
+
+
+
   </style>
 </head>
 
 
-
-
-
 <body>
-  
+<div class="pagination">
+  <!-- Button -->
+  <button class="btn">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="btn-icon">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5L8.25 12l7.5-7.5" />
+    </svg>
+  </button>
+
+  <!-- Pages -->
+<a href="#" class="page-link">1</a>
+<a href="#" class="page-link">2</a>
+<a href="#" class="page-link">3</a>
+<a href="#" class="page-link">4</a>
+<a href="#" class="page-link">5</a>
+<a href="#" class="page-link">6</a>
+<span class="dots">...</span>
+<a href="#" class="page-link">23</a>
+
+  <!-- Button -->
+  <button class="btn">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="btn-icon>
+      <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+    </svg>
+    
+  </button>
+</div>  
   
 </body>
 </html>
